--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Borel&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,8 +7,9 @@
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    display: flex;
+    background-color: #bdaa96;
+    height: 100vh;
 }
 
 /* styles for 'equals' button */
@@ -19,6 +22,88 @@ body {
     height: 70px;
 }
 */
+
+.container {
+    margin: auto;
+    width: 400px;
+}
+
+.body-calc {
+    height: 645px;
+    width: 442px;
+    margin: 100px;
+    background: #9979b6;
+    border: solid 3px #9374af;
+    border-radius: 28px;
+    box-shadow: 0 5px 15px -1px #5d4672;
+}
+
+.calc-screen {
+    width: 400px;
+    height: 165px;
+    background-color: #cbb4e0;
+    border-radius: 17px;
+    margin: 25px;
+    margin-left: 17px;
+    margin-bottom: 30px;
+    border-bottom: solid 2px #835aa7;
+}
+
+.op-screen {
+    width: 400px;
+    height: 32px;
+    text-align: right;
+    font-family: 'Borel', cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 19px;
+    background-color: #d7c2eb;
+    color: #8566a0a4;
+    border: none;
+    border-top-left-radius: 17px;
+    border-top-right-radius: 17px;
+    border-bottom-right-radius: none;
+    padding: 3px 10px 0 0;
+    border-bottom: dotted 2px;
+}
+
+.type-screen {
+    width: 400px;
+    height: 120px;
+    text-align: right;
+    font-family: 'Borel', cursive;
+    font-size: 50px;
+    color: #835aa7;
+    border: none;
+    padding-right: 24px;
+    padding-top: 24px;
+}
+
+.button-row {
+    width: 400px;
+    height: 85px;
+    padding: 20px;
+    background-color: #d7c2eb;
+    margin-top: 18px;
+    margin-left: 18px;
+    margin-right: -4px;
+    margin-bottom: 20px;
+    border-radius: 17px;
+    border-right: solid 2px #835aa7;
+    border-bottom: solid 2px #835aa7;
+    transition: all 0.2s ease-in-out;
+}
+
+.button {
+    font-family: 'Borel', cursive;
+    font-weight: 400;
+    font-size: 25px;
+    padding: 23px;
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    
+}
 
 .calculator > button {
     display: flex;
@@ -33,7 +118,7 @@ body {
     color: rgb(93, 52, 141);
     border: none;
     border-radius: 10px;
-    
+
 }
 
 
