--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 }
 
 body {
-    display: flex;
     background-color: #bdaa96;
     height: 100vh;
 }
@@ -24,12 +23,16 @@ body {
 */
 
 .container {
+    display: flex;
+    justify-content: center;
     margin: auto;
     width: 400px;
 }
 
 .body-calc {
-    height: 645px;
+    display: flexbox;
+    justify-items: center;
+    height: 672px;
     width: 442px;
     margin: 100px;
     background: #9979b6;
@@ -44,7 +47,6 @@ body {
     background-color: #cbb4e0;
     border-radius: 17px;
     margin: 25px;
-    margin-left: 17px;
     margin-bottom: 30px;
     border-bottom: solid 2px #835aa7;
 }
@@ -80,14 +82,14 @@ body {
 }
 
 .button-row {
+    display: flex;
+    justify-content: center;
+    
     width: 400px;
-    height: 85px;
+    height: 95px;
     padding: 20px;
     background-color: #d7c2eb;
-    margin-top: 18px;
-    margin-left: 18px;
-    margin-right: -4px;
-    margin-bottom: 20px;
+    margin: 15px;
     border-radius: 17px;
     border-right: solid 2px #835aa7;
     border-bottom: solid 2px #835aa7;
@@ -97,7 +99,7 @@ body {
 .button {
     font-family: 'Borel', cursive;
     font-weight: 400;
-    font-size: 25px;
+    font-size: 45px;
     padding: 23px;
     display: inline-block;
     text-align: center;
