--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    display: flex;
     background-color: #bdaa96;
     height: 100vh;
 }
@@ -23,17 +24,15 @@ body {
 */
 
 .container {
-    display: flex;
-    justify-content: center;
     margin: auto;
     width: 400px;
 }
 
 .body-calc {
-    display: flexbox;
-    justify-items: center;
-    height: 672px;
-    width: 442px;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: 440px;
     margin: 100px;
     background: #9979b6;
     border: solid 3px #9374af;
@@ -43,17 +42,18 @@ body {
 
 .calc-screen {
     width: 400px;
-    height: 165px;
+    height: 195px;
     background-color: #cbb4e0;
     border-radius: 17px;
     margin: 25px;
+    margin-left: 17px;
     margin-bottom: 30px;
-    border-bottom: solid 2px #835aa7;
+    border-bottom: #835aa7;
 }
 
 .op-screen {
     width: 400px;
-    height: 32px;
+    height: 42px;
     text-align: right;
     font-family: 'Borel', cursive;
     font-weight: 400;
@@ -65,21 +65,23 @@ body {
     border-top-left-radius: 17px;
     border-top-right-radius: 17px;
     border-bottom-right-radius: none;
-    padding: 3px 10px 0 0;
+    padding: 3px;
+    padding-right: 14px;
+    padding-top: 7px;
     border-bottom: dotted 2px;
 }
 
 .type-screen {
     width: 400px;
-    height: 110px;
+    height: 120px;
     text-align: right;
     font-family: 'Borel', cursive;
-    font-size: 65px;
+    font-size: 442%;
     color: #835aa7;
+    background-color: #cbb4e0;
     border: none;
     padding-right: 24px;
-    padding-top: 50px;
-    cursor: pointer;
+    padding-top: 80px;
 }
 
 .button-row {
@@ -87,10 +89,11 @@ body {
     justify-content: space-between;
     align-content: center;
     width: 400px;
-    height: 95px;
+    height: 85px;
     padding: 4px;
+    margin: 9px;
+    margin-left: 17px;
     background-color: #d7c2eb;
-    margin: 15px;
     border-radius: 17px;
     border-right: solid 2px #835aa7;
     border-bottom: solid 2px #835aa7;
@@ -100,6 +103,7 @@ body {
 .button {
     display: flex;
     background-color: #d7c2eb;
+    color: #383085;
     justify-items: center;
     align-items: center;
     font-family: 'Borel', cursive;
@@ -118,7 +122,51 @@ body {
     transition: all 0.4s ease;
 }
 
+.button-row-top {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    width: 400px;
+    height: auto;
+    padding: 4px;
+    margin: 9px;
+    margin-left: 17px;
+    background-color: #d7c2eb;
+    border-radius: 17px;
+    border-right: solid 2px #835aa7;
+    border-bottom: solid 2px #835aa7;
+    /*transition: all 0.2s ease-in-out;*/
+}
+
+.button-top {
+    display: flex;
+    background-color: #d7c2eb;
+    color: #383085;
+    justify-items: center;
+    align-items: center;
+    font-family: 'Borel', cursive;
+    font-weight: 400;
+    font-size: 38px;
+    border-radius: 10px;
+    border: none;
+    height: 30px;
+    width: min-content;
+    cursor: pointer;
+    padding: 26px;
+    padding-bottom: 15px;
+    padding-top: 45px;
+    padding-left: auto;
+    padding-right: auto;
+    transition: background-color 0.4s;
+    transition: all 0.4s ease;
+}
+
 .button:hover {
+    transform: scale(0.8);
+    background-color: #a58dbb;
+}
+
+.button-top:hover {
     transform: scale(0.8);
     background-color: #a58dbb;
 }
